style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');

* {
  margin: 0px;
  padding: 0px;
}

/* TURN ON FOR DEV TESTING
div{
  border: 2px solid red;
}
 */

body {
  font-family: 'Quicksand', sans-serif;
  font-size: 18px;
  box-sizing: border-box;
}

ol, li {
  list-style: none;
}

button{
  background-color: black;
  color: white;
  padding: 10px 20px;
  margin: 10px;
  font-size: 18px;
}

button:hover{
  cursor: pointer;
}

.page-wrapper{
  max-width: 100vw;
}

.section-wrapper{
  height: 100vh;
  padding: 30px 30px;
  display: flex;
  gap: 10px;
  justify-content: center;
}

.section-a{
  background-image: url("etch-a-sketch-bg.jpg");
  background-size: 860px;
  background-repeat: no-repeat;
}

.section-b{
  background-color: lightcoral;
}

.container{
  width: 420px;
  height: 420px;
  position: absolute;
  top: 130px;
  left: 220px;
  gap: 0px;
}

@media screen and (max-height: 550px){
  
  body{
    background-color: black;
    background-image: url("mobile-background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
  }

  .section-a{
    max-height: 100%;
    background-image: none;
    background-position: center;
    position: relative;

  }
  
  .container{
    width: 51.75%;
    height: 88%;
    position: absolute;
    top: 30px;
    
  }
}

:root {
  --grid-cols: 1;
  --grid-rows: 1;
}

#container {
  display: grid;
  grid-template-rows: repeat(var(--grid-rows), 1fr);
  grid-template-columns: repeat(var(--grid-cols), 1fr);
}

.grid-item {
  border: 1px solid #ddd;
  background-color: black;
}

.on{
  background-color: black;
}

.portrait-helper{
  display: none;
}

